# gerabaldi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint_and_test.yml
demos/: basic_use.py  bti_inference_comparison_pymc.py  riverbed_erosion.py  vts_paper_presilicon_variability.py  vts_paper_tddb_model_sensitivity.py
doc/: notes.md
gerabaldi/: __init__.py  exceptions.py  helpers.py  optimizer_vectorized.py  sim.py
gerabaldi/cookbook/: __init__.py  mech_mdls.py  test_envs.py  test_specs.py
gerabaldi/math/: __init__.py  minimize.py
gerabaldi/models/: __init__.py  devices.py  phys_envs.py  physenvs.py  random_vars.py  randomvars.py  reports.py  states.py  test_specs.py  testspecs.py
tests/: conftest.py
tests/feature_tests/: timescales_test.py
tests/unit_tests/: helpers_test.py  logger_test.py  logger_unit.py  top_level_test.py  toplevel_test.py
tests/unit_tests/cookbook_tests/: test_prebuilt_envs.py  test_prebuilt_mechs.py  test_prebuilt_tests.py
tests/unit_tests/models_tests/: devices_test.py  phys_envs_test.py  physenvs_test.py  random_vars_test.py  randomvars_test.py  states_test.py  test_specs_test.py  testspecs_test.py  timescale_test.py
